--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -116,9 +116,13 @@
             animation: slide-top 1s cubic-bezier(0.5, 0.8, 0.5, 0.8) both;
           }
 
-        #share {
+        .hidden {
             display: none;
-        }  
+        }
+        
+        .visible {
+            display: flex;
+        }
 
         .shares {
             display: flex;
